// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarStatusField /> matches snapshot 1`] = `
<select
  class="sc-iemXMA ezYUqe"
  id="carStatusField"
  name="name"
  type="text"
>
  <option
    class="sc-hHEjAm hmYdyr"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="yes"
  >
    tak
  </option>
  <option
    value="no"
  >
    nie
  </option>
</select>
`;

exports[`<CarStatusField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA varr"
          id="carStatusField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="yes"
          >
            tak
          </option>
          <option
            value="no"
          >
            nie
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CarStatusField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA ezYUqe"
          id="carStatusField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="yes"
          >
            tak
          </option>
          <option
            value="no"
          >
            nie
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<CarStatusField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA varr"
          id="carStatusField"
          name="name"
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="yes"
          >
            tak
          </option>
          <option
            value="no"
          >
            nie
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
